--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="utf-8" />
     <meta name="description" content="Web Studio main page" />
     <title>Web Studio (Version 4.0)</title>
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,6 +25,7 @@
   <body>
     <!-- Header-->
     <header class="header">
+      <div class="container header-container">
       <nav class="header-navigation">
         <a href="./index.html" class="header-logo link">
           Web<span class="header-logo-span">Studio</span>
@@ -27,7 +36,9 @@
             <a href="./index.html" class="header-menu-link link">Studio</a>
           </li>
           <li class="header-menu-item">
-            <a href="./portfolio.html" class="header-menu-link link">Portfolio</a>
+            <a href="./portfolio.html" class="header-menu-link link"
+              >Portfolio</a
+            >
           </li>
           <li class="header-menu-item">
             <a href="" class="header-menu-link link">Contacts</a>
@@ -37,7 +48,9 @@
       <address id="contacts" class="header-contacts">
         <ul class="header-contacts-list list">
           <li class="header-contacts-item">
-            <a href="mailto:info@devstudio.com" class="header-contacts-link link"
+            <a
+              href="mailto:info@devstudio.com"
+              class="header-contacts-link link"
               >info@devstudio.com</a
             >
           </li>
@@ -48,18 +61,22 @@
           </li>
         </ul>
       </address>
+    </div>
     </header>
     <!--Main part  -->
     <main>
       <!-- Розділ перший -->
-      <section class="solutions">
+      <section class="solutions section">
+        <div class="container main-container">
         <h1 class="title-one">Effective Solutions for Your Business</h1>
-        <button type="button" class="order-button">Order Service</button>
+        <button type="button" class="order-button button-container">Order Service</button>
+      </div>
       </section>
       <!-- Розділ 2 -->
-      <section class="advantages">
-        <h2>Lorem ipsum dolor.</h2>
-        <ul class="list">
+      <section class="advantages section">
+        <div class="container advantages-container">
+        <h2 class="visually-hidden ">Lorem ipsum dolor.</h2>
+        <ul class="advantages-list list">
           <li>
             <h3 class="title-three">Strategy</h3>
             <p class="text-description">
@@ -89,11 +106,13 @@
             </p>
           </li>
         </ul>
+      </div>
       </section>
       <!-- Розділ 3 -->
-      <section class="business">
+      <section class="business section">
+        <div class="container business-container">
         <h2 class="title-two">What are we doing</h2>
-        <ul class="list">
+        <ul class="business-list list">
           <li>
             <img
               src="./images/img1.jpg"
@@ -119,9 +138,11 @@
             />
           </li>
         </ul>
+      </div>
       </section>
       <!-- Розділ 4 -->
-      <section class="team">
+      <section class="team section">
+        <div class="container team-container">
         <h2 class="title-two">Our Team</h2>
         <ul class="team-list list">
           <li class="team-list-item">
@@ -165,10 +186,12 @@
             <p class="text-description">UI Designer</p>
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <!-- Footer -->
     <footer class="footer">
+      <div class="container">
       <a href="./index.html" class="footer-logo link">
         Web<span class="footer-logo-span">Studio</span>
       </a>
@@ -176,6 +199,7 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+    </div>
     </footer>
   </body>
 </html>
