--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
     <!--Main part  -->
     <main>
       <!-- Розділ перший -->
-      <section class="solutions section">
+      <section class="section-solutions section">
         <div class="container main-container">
-        <h1 class="title-one">Effective Solutions for Your Business</h1>
+        <h1 class="title-one title-container">Effective Solutions for Your Business</h1>
         <button type="button" class="order-button button-container">Order Service</button>
       </div>
       </section>
       <!-- Розділ 2 -->
-      <section class="advantages section">
+      <section class="section advantages section">
         <div class="container advantages-container">
         <h2 class="visually-hidden ">Lorem ipsum dolor.</h2>
         <ul class="advantages-list list">
@@ -109,7 +109,7 @@
       </div>
       </section>
       <!-- Розділ 3 -->
-      <section class="business section">
+      <section class="section business section">
         <div class="container business-container">
         <h2 class="title-two">What are we doing</h2>
         <ul class="business-list list">
@@ -141,7 +141,7 @@
       </div>
       </section>
       <!-- Розділ 4 -->
-      <section class="team section">
+      <section class="section team section">
         <div class="container team-container">
         <h2 class="title-two">Our Team</h2>
         <ul class="team-list list">
@@ -191,7 +191,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
       <a href="./index.html" class="footer-logo link">
         Web<span class="footer-logo-span">Studio</span>
       </a>
