--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,8 @@
   </head>
 
   <body>
-    <header class="header header-container">
+    <header class="header">
+      <div class="container header-container">
       <nav class="header-navigation">
         <a href="./index.html" class="header-logo link">
           Web<span class="header-logo-span">Studio</span>
@@ -33,7 +34,9 @@
             <a href="./index.html" class="header-menu-link link">Studio</a>
           </li>
           <li class="header-menu-item">
-            <a href="./portfolio.html" class="header-menu-link link">Portfolio</a>
+            <a href="./portfolio.html" class="header-menu-link link"
+              >Portfolio</a
+            >
           </li>
           <li class="header-menu-item">
             <a href="" class="header-menu-link link">Contacts</a>
@@ -43,7 +46,9 @@
       <address id="contacts" class="header-contacts">
         <ul class="header-contacts-list list">
           <li class="header-contacts-item">
-            <a href="mailto:info@devstudio.com" class="header-contacts-link link"
+            <a
+              href="mailto:info@devstudio.com"
+              class="header-contacts-link link"
               >info@devstudio.com</a
             >
           </li>
@@ -54,12 +59,14 @@
           </li>
         </ul>
       </address>
+    </div>
     </header>
     <main>
-      <section>
-        <h1 class="title1">Examples of our work</h1>
+      <section class="section">
+        <div class="container buttons-container">
+        <h1 class="title-one visually-hidden">Examples of our work</h1>
         <!-- Filter buttons -->
-        <ul class="list">
+        <ul class="buttons-list list">
           <li><button type="button" class="select-button">All</button></li>
           <li><button type="button" class="select-button">Web Site</button></li>
           <li><button type="button" class="select-button">App</button></li>
@@ -68,8 +75,10 @@
             <button type="button" class="select-button">Marketing</button>
           </li>
         </ul>
+      </div>
         <!-- Examples -->
-        <ul class="list">
+        <div class="work-examples">
+        <ul class="work-examples-list list">
           <li>
             <a href="" class="link"
               ><img
@@ -178,10 +187,12 @@
               <p class="text-description">Web Site</p></a>
           </li>
         </ul>
+      </div>
       </section>
     </main>
 
     <footer class="footer">
+      <div class="container footer-container">
       <a href="./index.html" class="footer-logo link">
         Web<span class="footer-logo-span">Studio</span>
       </a>
@@ -189,6 +200,7 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+    </div>
     </footer>
   </body>
 </html>
