--- a/portfolio.html
+++ b/portfolio.html
@@ -75,11 +75,10 @@
             <button type="button" class="select-button">Marketing</button>
           </li>
         </ul>
-      </div>
         <!-- Examples -->
         <div class="work-examples">
         <ul class="work-examples-list list">
-          <li>
+          <li class="example">
             <a href="" class="link"
               ><img
                 src="./images/banking-app.jpg"
@@ -87,11 +86,14 @@
                 width="360"
                 height="300"
               />
+              <div class="name-description">
               <h2 class="second-title">Banking App Interface Concept</h2>
-              <p class="text-description">App</p></a
+              <p class="text-description">App</p>
+            </div>
+              </a
             >
           </li>
-          <li>
+          <li class="example">
             <a href="" class="link">
               <img
                 src="./images/cashless.jpg"
@@ -99,10 +101,11 @@
                 width="360"
                 height="300"
               />
+              <div class="name-description">
               <h2 class="second-title">Cashless Payment</h2>
-              <p class="text-description">Marketing</p></a
+              <p class="text-description">Marketing</p></div></a
             >
-          </li>
+          </li class="example">
           <li>
             <a href="" class="link">
               <img
@@ -111,11 +114,12 @@
                 width="360"
                 height="300"
               />
+              <div class="name-description">
               <h2 class="second-title">Meditation App</h2>
-              <p class="text-description">App</p></a
+              <p class="text-description">App</p> </div></a
             >
           </li>
-          <li>
+          <li class="example">
             <a href="" class="link"
               ><img
                 src="./images/taxi.jpg"
@@ -123,11 +127,12 @@
                 width="360"
                 height="300"
               />
+              <div class="name-description">
               <h2 class="second-title">Taxi Service</h2>
-              <p class="text-description">Marketing</p>
+              <p class="text-description">Marketing</p></div>
             </a>
           </li>
-          <li>
+          <li class="example">
             <a href="" class="link">
               <img
                 src="./images/screen-illust.jpg"
@@ -135,11 +140,12 @@
                 width="360"
                 height="300"
               />
+              <div class="name-description">
               <h2 class="second-title">Screen Illustrations</h2>
-              <p class="text-description">Design</p>
+              <p class="text-description">Design</p></div>
             </a>
           </li>
-          <li>
+          <li class="example">
             <a href="" class="link">
               <img
                 src="./images/online-course.jpg"
@@ -147,11 +153,12 @@
                 width="360"
                 height="300"
               />
+              <div class="name-description">
               <h2 class="second-title">Online Courses</h2>
-              <p class="text-description">Marketing</p></a
+              <p class="text-description">Marketing</p></div></a
             >
           </li>
-          <li>
+          <li class="example">
             <a href="" class="link"
               ><img
                 src="./images/insta-stories.jpg"
@@ -159,11 +166,12 @@
                 width="360"
                 height="300"
               />
+              <div class="name-description">
               <h2 class="second-title">Instagram Stories Concept</h2>
-              <p class="text-description">Design</p></a
+              <p class="text-description">Design</p></div></a
             >
           </li>
-          <li>
+          <li class="example">
             <a href="" class="link">
               <img
                 src="./images/org-food.jpg"
@@ -171,11 +179,12 @@
                 width="360"
                 height="300"
               />
+              <div class="name-description">
               <h2 class="second-title">Organic Food</h2>
-              <p class="text-description">Web Site</p></a
+              <p class="text-description">Web Site</p></div></a
             >
           </li>
-          <li>
+          <li class="example">
             <a href="" class="link"
               ><img
                 src="./images/fresh-coffee.jpg"
@@ -183,11 +192,13 @@
                 width="360"
                 height="300"
               />
+              <div class="name-description">
               <h2 class="second-title">Fresh Coffee</h2>
-              <p class="text-description">Web Site</p></a>
+              <p class="text-description">Web Site</p></div></a>
           </li>
         </ul>
       </div>
+    </div>
       </section>
     </main>
 
