--- a/index.html
+++ b/index.html
@@ -26,180 +26,192 @@
     <!-- Header-->
     <header class="header">
       <div class="container header-container">
-      <nav class="header-navigation">
-        <a href="./index.html" class="header-logo link">
-          Web<span class="header-logo-span">Studio</span>
-        </a>
+        <nav class="header-navigation">
+          <a href="./index.html" class="header-logo link">
+            Web<span class="header-logo-span">Studio</span>
+          </a>
 
-        <ul class="header-menu list">
-          <li class="header-menu-item">
-            <a href="./index.html" class="header-menu-link link">Studio</a>
-          </li>
-          <li class="header-menu-item">
-            <a href="./portfolio.html" class="header-menu-link link"
-              >Portfolio</a
-            >
-          </li>
-          <li class="header-menu-item">
-            <a href="" class="header-menu-link link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address id="contacts" class="header-contacts">
-        <ul class="header-contacts-list list">
-          <li class="header-contacts-item">
-            <a
-              href="mailto:info@devstudio.com"
-              class="header-contacts-link link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="header-contacts-item">
-            <a href="tel:+110001111111" class="header-contacts-link link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
-    </div>
+          <ul class="header-menu list">
+            <li class="header-menu-item">
+              <a href="./index.html" class="header-menu-link link">Studio</a>
+            </li>
+            <li class="header-menu-item">
+              <a href="./portfolio.html" class="header-menu-link link"
+                >Portfolio</a
+              >
+            </li>
+            <li class="header-menu-item">
+              <a href="" class="header-menu-link link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address id="contacts" class="header-contacts">
+          <ul class="header-contacts-list list">
+            <li class="header-contacts-item">
+              <a
+                href="mailto:info@devstudio.com"
+                class="header-contacts-link link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="header-contacts-item">
+              <a href="tel:+110001111111" class="header-contacts-link link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <!--Main part  -->
     <main>
       <!-- Розділ перший -->
-      <section class="section-solutions section">
+      <section class="section-solutions">
         <div class="container main-container">
-        <h1 class="title-one title-container">Effective Solutions for Your Business</h1>
-        <button type="button" class="order-button button-container">Order Service</button>
-      </div>
+          <h1 class="title-one title-container">
+            Effective Solutions for Your Business
+          </h1>
+          <button type="button" class="order-button button-container">
+            Order Service
+          </button>
+        </div>
       </section>
       <!-- Розділ 2 -->
-      <section class="section advantages section">
+      <section class="advantages-section">
         <div class="container advantages-container">
-        <h2 class="visually-hidden ">Lorem ipsum dolor.</h2>
-        <ul class="advantages-list list">
-          <li>
-            <h3 class="title-three">Strategy</h3>
-            <p class="text-description">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-three">Punctuality</h3>
-            <p class="text-description">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-three">Diligence</h3>
-            <p class="text-description">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-three">Technologies</h3>
-            <p class="text-description">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </div>
+          <h2 class="visually-hidden">Lorem ipsum dolor.</h2>
+          <ul class="advantages-list list">
+            <li class="advantages-description">
+              <h3 class="title-three">Strategy</h3>
+              <p class="text-description">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="advantages-description">
+              <h3 class="title-three">Punctuality</h3>
+              <p class="text-description">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="advantages-description">
+              <h3 class="title-three">Diligence</h3>
+              <p class="text-description">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="advantages-description">
+              <h3 class="title-three">Technologies</h3>
+              <p class="text-description">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Розділ 3 -->
-      <section class="section business section">
+      <section class="section business-section">
         <div class="container business-container">
-        <h2 class="title-two">What are we doing</h2>
-        <ul class="business-list list">
-          <li>
-            <img
-              src="./images/img1.jpg"
-              alt="Campaigns"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img2.jpg"
-              alt="Chat bots"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img3.jpg"
-              alt="Mobile apps"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
-      </div>
+          <h2 class="title-two">What are we doing</h2>
+          <ul class="business-list list">
+            <li>
+              <img
+                src="./images/img1.jpg"
+                alt="Campaigns"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/img2.jpg"
+                alt="Chat bots"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/img3.jpg"
+                alt="Mobile apps"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Розділ 4 -->
-      <section class="section team section">
+      <section class="team-section team">
         <div class="container team-container">
-        <h2 class="title-two">Our Team</h2>
-        <ul class="team-list list">
-          <li class="team-list-item">
-            <img
-              src="./images/mark.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-three">Mark Guerrero</h3>
-            <p class="text-description">Product Designer</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              src="./images/tom.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-three">Tom Ford</h3>
-            <p class="text-description">Frontend Developer</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              src="./images/camila.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-three">Camila Garcia</h3>
-            <p class="text-description">Marketing</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              src="./images/daniel.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-three">Daniel Wilson</h3>
-            <p class="text-description">UI Designer</p>
-          </li>
-        </ul>
-      </div>
+          <h2 class="title-two">Our Team</h2>
+          <ul class="team-list list">
+            <li class="team-list-item">
+              <img
+                src="./images/mark.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <div class="name-position">
+                <h3 class="title-three">Mark Guerrero</h3>
+                <p class="position">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img
+                src="./images/tom.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <div class="name-position">
+                <h3 class="title-three">Tom Ford</h3>
+                <p class="position">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img
+                src="./images/camila.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <div class="name-position">
+                <h3 class="title-three">Camila Garcia</h3>
+                <p class="position">Marketing</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img
+                src="./images/daniel.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <div class="name-position">
+                <h3 class="title-three">Daniel Wilson</h3>
+                <p class="position">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Footer -->
     <footer class="footer">
       <div class="container footer-container">
-      <a href="./index.html" class="footer-logo link">
-        Web<span class="footer-logo-span">Studio</span>
-      </a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </div>
+        <a href="./index.html" class="footer-logo link">
+          Web<span class="footer-logo-span">Studio</span>
+        </a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
