--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="container business-container">
           <h2 class="title-two">What are we doing</h2>
           <ul class="business-list list">
-            <li>
+            <li class="work-samples">
               <img
                 src="./images/img1.jpg"
                 alt="Campaigns"
@@ -125,7 +125,7 @@
                 height="300"
               />
             </li>
-            <li>
+            <li class="work-samples">
               <img
                 src="./images/img2.jpg"
                 alt="Chat bots"
@@ -133,7 +133,7 @@
                 height="300"
               />
             </li>
-            <li>
+            <li class="work-samples">
               <img
                 src="./images/img3.jpg"
                 alt="Mobile apps"
