--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
           </li>
         </ul>
         <!-- Examples -->
-        <div class="work-examples">
+        <!-- <div class="work-examples"> -->
         <ul class="work-examples-list list">
           <li class="example">
             <a href="" class="link"
@@ -105,8 +105,8 @@
               <h2 class="second-title">Cashless Payment</h2>
               <p class="text-description">Marketing</p></div></a
             >
-          </li class="example">
-          <li>
+          </li>
+          <li class="example">
             <a href="" class="link">
               <img
                 src="./images/meditation.jpg"
@@ -197,7 +197,7 @@
               <p class="text-description">Web Site</p></div></a>
           </li>
         </ul>
-      </div>
+      <!-- </div> -->
     </div>
       </section>
     </main>
