changed to .portfolio-example

--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
         <!-- Examples -->
         <!-- <div class="work-examples"> -->
         <ul class="work-examples-list list">
-          <li class="example">
+          <li class="portfolio-example">
             <a href="" class="link"
               ><img
                 src="./images/banking-app.jpg"
@@ -93,7 +93,7 @@
               </a
             >
           </li>
-          <li class="example">
+          <li class="portfolio-example">
             <a href="" class="link">
               <img
                 src="./images/cashless.jpg"
@@ -106,7 +106,7 @@
               <p class="text-description">Marketing</p></div></a
             >
           </li>
-          <li class="example">
+          <li class="portfolio-example">
             <a href="" class="link">
               <img
                 src="./images/meditation.jpg"
@@ -119,7 +119,7 @@
               <p class="text-description">App</p> </div></a
             >
           </li>
-          <li class="example">
+          <li class="portfolio-example">
             <a href="" class="link"
               ><img
                 src="./images/taxi.jpg"
@@ -132,7 +132,7 @@
               <p class="text-description">Marketing</p></div>
             </a>
           </li>
-          <li class="example">
+          <li class="portfolio-example">
             <a href="" class="link">
               <img
                 src="./images/screen-illust.jpg"
@@ -145,7 +145,7 @@
               <p class="text-description">Design</p></div>
             </a>
           </li>
-          <li class="example">
+          <li class="portfolio-example">
             <a href="" class="link">
               <img
                 src="./images/online-course.jpg"
@@ -158,7 +158,7 @@
               <p class="text-description">Marketing</p></div></a
             >
           </li>
-          <li class="example">
+          <li class="portfolio-example">
             <a href="" class="link"
               ><img
                 src="./images/insta-stories.jpg"
@@ -171,7 +171,7 @@
               <p class="text-description">Design</p></div></a
             >
           </li>
-          <li class="example">
+          <li class="portfolio-example">
             <a href="" class="link">
               <img
                 src="./images/org-food.jpg"
@@ -184,7 +184,7 @@
               <p class="text-description">Web Site</p></div></a
             >
           </li>
-          <li class="example">
+          <li class="portfolio-example">
             <a href="" class="link"
               ><img
                 src="./images/fresh-coffee.jpg"
