--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <!-- Header-->
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <nav class="header-navigation">
           <a href="./index.html" class="header-logo link">
             Web<span class="header-logo-span">Studio</span>
