main container prop del+pad top de;

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
       </section>
       <!-- Розділ 3 -->
-      <section class="section business-section">
+      <section class=" business-section">
         <div class="container business-container">
           <h2 class="title-two">What are we doing</h2>
           <ul class="business-list list">
